Add tasks and form
add form styles and header

--- a/files/style.css
+++ b/files/style.css
@@ -10,3 +10,13 @@ p {
 input:focus {
 	background: pink;
 }
+
+ul {
+	background-color: gray;
+	color: white;
+	font-weight: bold;
+}
+
+input:focus {
+	background: pink;
+}
